# basic_crud_with_rust

./: .env  .envexample  Cargo.toml  Dockerfile  docker-compose.yaml  prometheus.yml  report.html  test.json
.sqlx/: query-1db8edb8a4cc1b2fe1fc3bd2a170914261786a5301eba644e938c2536766f796.json  query-43c6a1208d9e3d11fa5ed72c2ffbc041cd0edf11a78fa90bc64ff1fd853d8a12.json  query-98fdcf00f9cfa5d229d91cdd64cac9e113c28626efe287108b3c3312044e96cf.json  query-9b34099931c21cbca045859289f4c7b854e308cb878693883efda2ce63f8ba0e.json
migrations/: 20241104084707_init.down.sql  20241104084707_init.up.sql  20241105053852_init.up.sql  20241105110454_init.down.sql  20241105110454_init.up.sql
src/: handler.rs  main.rs  schema.rs
src/controllers/: post_controller.rs
src/models/: post_model.rs
src/schemas/: post_schema.rs
src/services/: mod.rs  post_service.rs
test/: Dockerfile  load_test.js
test/api/: post_test.js
