[package]
name = "basic_crud"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7"                               
actix-web = "4.2.1"                              
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"                                 
env_logger = "0.11"                             
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"                              
sqlx = { version = "0.8", features = ["runtime-async-std-native-tls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.2", features = ["serde", "v4"] }
